[#6] Chore: Search API 관련 설정 추가
application.yml
- API KEY 암호화 및 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,5 +20,9 @@ spring:
       hibernate:
         format_sql: true
 
-
-
+maniadb:
+  url: http://maniadb.com/api/search/
+  method: song
+  display: 10
+  apiKey: ${MANIADB_API_KEY}
+  version: 0.5
