[#6] Chore: Search API 사용에 필요한 의존성 추가
Jackson Dataformat XML, Apache Commons Lang3
- 결과 값 XML을 쉽게 매핑하기 위해 사용
- OPEN API 사용과 더불어 각종 문자열 처리를 위해 추가

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.11.1'
+    compile 'org.apache.commons:commons-lang3:3.11'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
