[#6] Feat: LastFM API 관련 프로퍼티 추가
application.yml
- lastfm 관련 값 추가

LastFmProperties
- properties 값 객체

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,13 @@ spring:
       hibernate:
         format_sql: true
 
+lastfm:
+  url: http://ws.audioscrobbler.com/2.0
+  method: track.search
+  limit: 10
+  apiKey: ${LASTFM_API_KEY}
+  format: json
+
 maniadb:
   url: http://maniadb.com/api/search/
   method: song
