[#22] Chore: 자동 배포를 위한 Travis 설정 값 추가
AWS S3 버킷 업로드 관련 설정 추가

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,19 @@ notifications:
   email:
     recipients:
       - museopkim0214@gmail.com
+
+before_deploy:
+  - zip -r songrequest-backend *
+  - mkdir -p deploy
+  - mv songrequest-backend.zip deploy/songrequest-backend.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: songrequest-backend-build
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
