[#22] Chore: Codedeploy 설정 수정

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,9 @@ deploy:
     region: ap-northeast-2
     wait-until-deployed: true
 
+    on:
+      all_branches: true
+
 notifications:
   email:
     recipients:
