--- a/appspec.yml
+++ b/appspec.yml
@@ -1,6 +1,6 @@
 version: 0.0
 os: linux
-file:
+files:
   - source: /
-    destination: /home/ubuntu/app/step2/zip/
+    destination: /home/ubuntu/app/songrequest/zip/
     overwrite: yes
