--- a/appspec.yml
+++ b/appspec.yml
@@ -4,3 +4,15 @@ files:
   - source: /
     destination: /home/ubuntu/app/songrequest/zip/
     overwrite: yes
+
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ubuntu
+    group: ubuntu
+
+hooks:
+  ApplicationStart:
+    - location: deploy.sh
+      timeout: 60
+      runas: ubuntu
