--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_deploy:
   - mkdir -p before-deploy
   - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
-  - cp build/libs*.jar before-deploy
+  - cp build/libs/*.jar before-deploy
   - cd before-deploy && zip -r before-deploy *
   - cd ../ && mkdir -p deloy
   - mv before-deploy/before-deploy.zip deploy/songrequest-backend.zip
