--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_deploy:
   - cp appspec.yml before-deploy/
   - cp build/libs/*.jar before-deploy
   - cd before-deploy && zip -r before-deploy *
-  - cd ../ && mkdir -p deloy
+  - cd ../ && mkdir -p deploy
   - mv before-deploy/before-deploy.zip deploy/songrequest-backend.zip
 
 deploy:
