[#41] Feat: JWT 관련 설정 값 추가
JwtProperties를 통해 Secret, Expiration 값 정의

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,6 +64,13 @@ spring:
             redirectUri: http://localhost:8080/login/oauth2/code/google
             scope: email, profile
 
+jwt:
+  tokenSecret: ${TOKEN_SECRET}
+  tokenExpiration: ${TOKEN_EXPIRATION}
+  authorizedRedirectUri: http://localhost:3000/auth/jwt
+
+
+
 lastfm:
   url: http://ws.audioscrobbler.com/2.0
   method: track.search
