[#41] Feat: 기본 Google OAuth 인증 로직 추가
CustomOAuth2UserService
- DB에서 Email로 먼저 조회 후 현재 계정이 존재 할 경우 Profile 업데이트, 아닐 경우 저장

SecurityConfig
- 세션 기반으로 수동 테스트 하기 위해 무효화 코드 임시 주석 처리

OAuthAttributes
- Google OAuth 속성 정의

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,8 +59,8 @@ spring:
       client:
         registration:
           google:
-            clientId: ${CLIENT_ID}
-            clientSecret: ${CLIENT_SECRET}
+            client-id: ${CLIENT_ID}
+            client-secret: ${CLIENT_SECRET}
             redirectUri: http://localhost:8080/login/oauth2/code/google
             scope: email, profile
 
