[#41] Fix: JWT 속성 값 수정
header, header prefix 값 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,9 +67,8 @@ spring:
 jwt:
   tokenSecret: ${TOKEN_SECRET}
   tokenExpiration: ${TOKEN_EXPIRATION}
-  authorizedRedirectUri: http://localhost:3000/auth/jwt
-
-
+  header: Authorization
+  headerPrefix: 'Bearer '
 
 lastfm:
   url: http://ws.audioscrobbler.com/2.0
