[#41] Fix: application.yml 수정
prod - 시큐리티 관련 설정 값 누락 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,16 @@ spring:
       hibernate:
         format_sql: true
 
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${CLIENT_ID}
+            client-secret: ${CLIENT_SECRET}
+            redirectUri: http://localhost:8080/login/oauth2/code/google
+            scope: email, profile
+
 lastfm:
   url: http://ws.audioscrobbler.com/2.0
   method: track.search
