[#41] Fix: prod 누락되어 있던 JWT 속성 값 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,12 @@ spring:
             redirectUri: ${REDIRECT_URI}
             scope: email, profile
 
+jwt:
+  tokenSecret: ${TOKEN_SECRET}
+  tokenExpiration: ${TOKEN_EXPIRATION}
+  header: Authorization
+  headerPrefix: 'Bearer '
+
 lastfm:
   url: http://ws.audioscrobbler.com/2.0
   method: track.search
