--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,6 +50,13 @@ maniadb:
   apiKey: ${MANIADB_API_KEY}
   version: 0.5
 
+server:
+  tomcat:
+    remoteip:
+      remote-ip-header: x-forwarded-for
+      protocol-header: x-forwarded-proto
+
+
 ---
 
 spring:
