[#41] Fix: 쿠키 도메인 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,7 @@ jwt:
   tokenExpiration: ${TOKEN_EXPIRATION}
   header: Authorization
   headerPrefix: 'Bearer '
+  tokenUrl: ${TOKEN_URL}
 
 lastfm:
   url: http://ws.audioscrobbler.com/2.0
