[#41] Fix: 리다이렉트 successURL 오류 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,9 @@ spring:
             redirect-uri: http://localhost:8080/login/oauth2/code/google
             scope: email, profile
 
+oauth2:
+  successUrl: http://localhost:3000
+
 jwt:
   tokenSecret: ${TOKEN_SECRET}
   tokenExpiration: ${TOKEN_EXPIRATION}
