--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,6 +79,10 @@ jwt:
   tokenExpiration: ${TOKEN_EXPIRATION}
   header: Authorization
   headerPrefix: 'Bearer '
+  tokenDomain: realpianolive.com
+  tokenUrl: http://localhost:3000/auth/token
+  generationKeySecret: ${GENERATION_KEY}
+  generationKeyExpiration: 10000
 
 lastfm:
   url: http://ws.audioscrobbler.com/2.0
