[#41] Chore: JWT 관련 프로퍼티 값 정리
- tokenDomain 프로퍼티 삭제
- generationKey 관련 값 Test 프로퍼티에 추가

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -27,3 +27,5 @@ jwt:
   headerPrefix: 'Bearer '
   tokenDomain: http://localhost:3000/auth/token
   tokenUrl: http://localhost:3000
+  generationKeySecret: TestGenerationKeySecret
+  generationKeyExpiration: 10000
