[#58] Chore: Application properties - SQL 출력 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: validate
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
